updated nav bar

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   </head>
   <body>
     <header>
+      <h1 id="name-styling">David Attenborough</h1>
       <nav>
         <a href="index.html" class="nav-link"><li>Home</li></a>
         <a href="about.html" class="nav-link"><li>About</li></a>
@@ -57,7 +58,6 @@
     </header>
     <main>
       <h1 id="first-name">Sir David</h1>
-
       <h1 id="last-name">Attenborough</h1>
     </main>
   </body>
