home page complete

--- a/about.html
+++ b/about.html
@@ -9,13 +9,18 @@
     <link rel="stylesheet" href="stylesheets/css-styling.css" />
   </head>
   <body>
+  <body>
     <header>
-      <h1 id="name-styling">David Attenborough</h1>
+      <!-- Restaurant name -->
+      <h1 id="name-text">David Attenborough</h1>
+      <!-- Navigation bar -->
       <nav>
         <a href="index.html" class="nav-link"><li>Home</li></a>
         <a href="about.html" class="nav-link"><li>About</li></a>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <h1>About</h1>
+    </main>
   </body>
 </html>
