--- a/index.html
+++ b/index.html
@@ -2,24 +2,33 @@
     Name: Hamza Haque
     Course: Science Honours 20FH
     School: Fort Richmond Collegiate
-
-    This is a website about Sir David Attenborough for a school project.
 -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sir David Attenborough</title>
+    <title>David Attenborough</title>
 
+    <!-- External CSS -->
     <link rel="stylesheet" href="stylesheets/css-styling.css" />
 
     <style>
+      /*
+        This styles the body to have a background image of a portrait of David Attenborough. The background image is centered.
+        The background image is set to not repeat and appear multiple times. The background's size has been set to take
+        up the entire body.
+
+        It has a height of 100vh, 100% of the viewport's height - the full height of the screen.
+        The position has been set to relative for the heading tag positioning, it will be the position ancestor.
+      */
       body {
         background: url("images/david-attenborough-main-picture.jpg");
 
         height: 100vh;
+
         background-position: center;
 
         background-repeat: no-repeat;
@@ -27,19 +36,22 @@
         background-size: cover;
 
         position: relative;
-        overflow: hidden;
       }
 
-      /* 
-        Styles the green background behind the name
+      /*
+        This styles the main tag. 
+
+        It is absolute positioned relative to the body. It has a top and left value of 50%, but then to center the element, it has
+        been translated -50% top and left. This helps position the green background in the center. 
+
+        It has a text colour of #dad7cd and a background colour of #588157. The text is centered. It has -50% margin on the right to 
+        ensure that the element doesn't shrink. This was just by playing around and testing to see what works.
       */
       main {
         position: absolute;
         top: 80%;
         left: 50%;
         margin: auto -50% auto auto;
-
-        width: fit-content;
 
         -o-transform: translate(-50%, -50%);
         -webkit-transform: translate(-50%, -50%);
@@ -53,7 +65,8 @@
       }
 
       /*
-        ID to style the Sir David Attenborough name
+        ID that styles the h1 tag that says: "Sir David Attenborough"
+
         It uses the Georgia font family, if that doesn't work it uses the Times font family,
         if that doesn't work it uses the Times New Roman font, and finally it uses the serif font
         as a last resort.
@@ -65,7 +78,7 @@
 
         It is fully opaque, and has no animations to override the animations set for h1 in the external CSS. 
       */
-      #main-text {
+      #main-name-text {
         margin: 30px;
         font-size: 110px;
         font-family: Georgia, Times, "Times New Roman", serif;
@@ -85,16 +98,18 @@
   </head>
   <body>
     <header>
-      <!-- Restaurant name -->
-      <h1 id="name-text">David Attenborough</h1>
+      <!-- Name in Header -->
+      <h1 id="header-name-text">David Attenborough</h1>
       <!-- Navigation bar -->
       <nav>
         <a href="index.html" class="nav-link"><li>Home</li></a>
         <a href="about.html" class="nav-link"><li>About</li></a>
       </nav>
     </header>
+
+    <!-- The main tag is the green background -->
     <main>
-      <h1 id="main-text">Sir David Attenborough</h1>
+      <h1 id="main-name-text">Sir David Attenborough</h1>
     </main>
   </body>
 </html>
