created about.html page

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <!-- Navigation bar -->
       <nav>
         <a href="index.html" class="nav-link"><li>Home</li></a>
+        <a href="about.html" class="nav-link"><li>About</li></a>
       </nav>
     </header>
 
