added a quote and introductory paragraph

--- a/about.html
+++ b/about.html
@@ -21,13 +21,36 @@
     </header>
 
     <main>
-      <h1>About</h1>
+      <h1>About David Attenborough</h1>
+      <hr />
+
+      <!-- David Attenborough Quote -->
+      <figure class="quote">
+        <blockquote>
+          "It seems to me that the natural world is the greatest source of
+          excitement; the greatest source of visual beauty; the greatest source
+          of intellectual interest. It is the greatest source of so much in life
+          that makes life worth living."
+        </blockquote>
+        <figcaption>&mdash; David Attenborough</figcaption>
+      </figure>
+
+      <section>
+        <p>
+          <strong>Sir David Frederick Attenborough</strong> is an English
+          broadcaster, writer, and most importantly, an environmentalist. He is
+          known for his innovative nature documentaries and television shows
+          that have completely transformed the world’s view of wild animals. His
+          work has led to a deeper interest in the planet’s most precious and
+          fragile species.
+        </p>
+      </section>
     </main>
 
     <footer>
       <p>
-        <sup>&copy;</sup>2022, Mughals & Co. All rights reserved. Website made
-        by Hamza Haque.
+        <sup>&copy;</sup>2022 All rights reserved. Website made by
+        <a href="https://github.com/HamzaH30" target="_blank">Hamza Haque</a>.
       </p>
     </footer>
   </body>
