added new section to about page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <figcaption>&mdash; David Attenborough</figcaption>
       </figure>
 
-      <section>
+      <article>
         <p>
           <strong>Sir David Frederick Attenborough</strong> is an English
           broadcaster, writer, and most importantly, an environmentalist. He is
@@ -44,9 +44,24 @@
           work has led to a deeper interest in the planet’s most precious and
           fragile species.
         </p>
-      </section>
-
-      <section></section>
+        <p>
+          David Attenborough was born on May 8, 1926 in London, England to
+          Frederick Attenborough and Mary Clegg. He grew up in Leicester where
+          his father was the principal of the University College. David
+          Attenborough has an elder brother, Richard, who is known for his
+          career as an actor and film producer. He also has a younger brother
+          and two adoptive sisters.
+        </p>
+        <figure>
+          <img
+            src="images/family-picture-1.jpg"
+            alt="A Picture of David Attenboroguh with his brothers."
+          />
+          <figcaption>
+            David Attenborough (center) with his brothers in 1933
+          </figcaption>
+        </figure>
+      </article>
     </main>
 
     <footer>
