finished about.html page with styling

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
           fragile species.
         </p>
         <p>
-          David Attenborough was born on May 8, 1926 in London, England to
+          David Attenborough was born on May 8, 1926, in London, England to
           Frederick Attenborough and Mary Clegg. He grew up in Leicester where
           his father was the principal of the University College. David
           Attenborough has an elder brother, Richard, who is known for his
@@ -61,11 +61,75 @@
             David Attenborough (center) with his brothers in 1933
           </figcaption>
         </figure>
+        <p>
+          David Attenborough’s interest in nature started from an early age. His
+          childhood was spent creating a collection of stones, fossils, and
+          natural specimens. His collection was admired by Jacquetta Hawkes,
+          which further encouraged him to study nature. At age 10, he and his
+          brother, Richard, attended a lecture by Archibald Belaney. David
+          Attenborough was heavily inspired by Belaney’s advocacy of
+          conservation. When the Zoology Department needed a supply of newts,
+          David Attenborough went to a nearby pond and sold the newts he had
+          collected for 3 pence each.
+        </p>
+        <figure class="quote">
+          <blockquote>
+            "[David] was bowled over by the man's determination to save the
+            beaver, by his profound knowledge of the flora and fauna of the
+            Canadian wilderness and by his warnings of ecological disaster
+            should the delicate balance between them be destroyed. The idea that
+            mankind was endangering nature by recklessly despoiling and
+            plundering its riches was unheard of at the time, but it is one that
+            has remained part of Dave's own credo to this day."
+          </blockquote>
+          <figcaption>
+            &mdash; Richard Attenborough on the impact Archibald Belaney had on
+            his brother.
+          </figcaption>
+        </figure>
+        <figure>
+          <img
+            src="images/young-david-attenborough-1.jpg"
+            alt="A picture of when David Attenborough was a child on the campus grounds of the University of Leicester."
+            width="641"
+            height="559.5"
+          />
+          <figcaption>
+            David Attenborough as a child on the campus grounds of the
+            University of Leicester.
+          </figcaption>
+        </figure>
+        <p>
+          David Attenborough attended Wyggeston Grammar School for Boys located
+          in Leicester. In 1945, he was awarded a scholarship to Clare College
+          in Cambridge. He studied geology and zoology and got a degree in
+          natural sciences. Two years later, he joined the Royal Navy for his
+          national service. In 1950, David Attenborough married Jane Ebsworth
+          Oriel. They had two children.
+        </p>
+        <figure class="quote">
+          <blockquote>
+            Before the BBC, I joined the Navy in order to travel.
+          </blockquote>
+          <figcaption>&mdash; David Attenboroguh</figcaption>
+        </figure>
+        <figure>
+          <img
+            src="images/family-picture-2.jpg"
+            alt="David Attenborough with his wife and kids in 1957."
+            width="382.5px"
+            height="508.75px"
+          />
+          <figcaption>
+            David Attenboroguh with his wife and kids in 1957.
+          </figcaption>
+        </figure>
       </article>
     </main>
 
     <footer>
-      <p>
+      <hr id="footer-hr" />
+      <p id="footer-text">
         <sup>&copy;</sup>2022 All rights reserved. Website made by
         <a href="https://github.com/HamzaH30" target="_blank">Hamza Haque</a>.
       </p>
