--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
       <nav>
         <a href="index.html" class="nav-link"><li>Home</li></a>
         <a href="about.html" class="nav-link"><li>About</li></a>
+        <a href="career-and-work.html" class="nav-link">
+          <li>Career & Work</li>
+        </a>
       </nav>
     </header>
 
