currently doing awards page

--- a/about.html
+++ b/about.html
@@ -20,6 +20,9 @@
         <a href="career-and-work.html" class="nav-link">
           <li>Career & Work</li>
         </a>
+        <a href="awards-and-honours.html" class="nav-link">
+          <li>Awards & Honours</li>
+        </a>
       </nav>
     </header>
 
