--- a/awards-and-honours.html
+++ b/awards-and-honours.html
@@ -225,6 +225,38 @@
             </div>
           </div>
         </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/2009 Prince of Asturias Award for Social Sciences.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Knight-of-Grand-Cross.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
