--- a/awards-and-honours.html
+++ b/awards-and-honours.html
@@ -257,6 +257,54 @@
             </div>
           </div>
         </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Indira Gandhi Prize.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Crystal Award.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Gold Medal of the Royal Canadian Geographical Society.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
