--- a/awards-and-honours.html
+++ b/awards-and-honours.html
@@ -133,38 +133,6 @@
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
-                src="images/awards/Kew-International-Medal.jpg"
-                alt=""
-                style="width: 300px; height: 300px"
-              />
-            </div>
-            <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
-            </div>
-          </div>
-        </div>
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img
-                src="images/awards/Cosmos-award.png"
-                alt=""
-                style="width: 300px; height: 300px"
-              />
-            </div>
-            <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
-            </div>
-          </div>
-        </div>
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img
                 src="images/awards/RSPB-Medal.jpg"
                 alt=""
                 style="width: 300px; height: 300px"
@@ -294,6 +262,70 @@
             <div class="flip-card-front">
               <img
                 src="images/awards/Gold Medal of the Royal Canadian Geographical Society.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Landscape Institute Medal for Lifetime Achievement.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/George_Foster_Peabody_Awards.jpg"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/order-of-merit.png"
+                alt=""
+                style="width: 300px; height: 300px"
+              />
+            </div>
+            <div class="flip-card-back">
+              <h1>.</h1>
+              <p>.</p>
+              <p>.</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img
+                src="images/awards/Companion of Honour (CH).jpg"
                 alt=""
                 style="width: 300px; height: 300px"
               />
