need to check on other device

--- a/awards-and-honours.html
+++ b/awards-and-honours.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="stylesheets/css-styling.css" />
 
     <style>
+      #image-container {
+        text-align: center;
+      }
+
       /* The flip card container */
       .flip-card {
         background-color: transparent;
@@ -19,6 +23,8 @@
 
         /* To line them up side-by-side */
         display: inline-block;
+
+        margin: 80px;
       }
 
       /* Needed to position the front and back side */
@@ -79,7 +85,8 @@
           as an environmentalist, writer, and broadcaster.
         </p>
       </section>
-      <section>
+      <section id="image-container">
+        <!-- Cherry Kearton Medal and Award -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
