finished awards info

--- a/awards-and-honours.html
+++ b/awards-and-honours.html
@@ -60,12 +60,12 @@
         color: #dad7cd;
       }
 
-      #image-container {
-        text-align: center;
+      .text-spilling-out {
+        font-size: 25px;
       }
 
-      #text-spilling-out {
-        font-size: 25px;
+      #image-container {
+        text-align: center;
       }
     </style>
   </head>
@@ -191,7 +191,7 @@
               />
             </div>
             <div class="flip-card-back">
-              <h1 id="text-spilling-out">
+              <h1 class="text-spilling-out">
                 José Vasconcelos World Award of Education
               </h1>
               <p>2004</p>
@@ -199,150 +199,168 @@
           </div>
         </div>
 
+        <!-- Nierenberg Prize -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/Nierenberg_Prize.jpg"
-                alt=""
+                alt="An image of the Nierenberg Prize."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1>Nierenberg Prize</h1>
+              <p>2005</p>
             </div>
           </div>
         </div>
+
+        <!-- Prince of Asturias Award for Social Sciences -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/2009 Prince of Asturias Award for Social Sciences.jpg"
-                alt=""
+                alt="An image of the Prince of Asturias Award for Social Sciences."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1 class="text-spilling-out">
+                Prince of Asturias Award for Social Sciences
+              </h1>
+              <p>2009</p>
             </div>
           </div>
         </div>
+
+        <!-- Knight Grand Cross of the Order of St Michael and St George -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/Knight-of-Grand-Cross.jpg"
-                alt=""
+                alt="An image of David Attenborough after being awarded the Knight Grand Cross of the Order of St Michael and St George."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1 class="text-spilling-out">
+                Knight Grand Cross of the Order of St Michael and St George
+              </h1>
+              <p>2022</p>
             </div>
           </div>
         </div>
+
+        <!-- Indira Gandhi Prize -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/Indira Gandhi Prize.jpg"
-                alt=""
+                alt="An image of the Indira Gandhi Prize"
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1>Indira Gandhi Prize</h1>
+              <p>2019</p>
             </div>
           </div>
         </div>
+
+        <!-- Crystal Award -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/Crystal Award.jpg"
-                alt=""
+                alt="An image of David Attenborough receiving the Crystal Award at the World Economic Forum in Davos, Switzerland."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1>Crystal Award</h1>
+              <p>2019</p>
             </div>
           </div>
         </div>
+
+        <!-- Gold Medal of the Royal Canadian Geographical Society -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/Gold Medal of the Royal Canadian Geographical Society.jpg"
-                alt=""
+                alt="An image of the Gold Medal of the Royal Canadian Geographical Society."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1 style="font-size: 20px">
+                Royal Canadian Geographical Society Gold Medal
+              </h1>
+              <p>2017</p>
             </div>
           </div>
         </div>
+
+        <!-- Landscape Institute Medal for Lifetime Achievement -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/Landscape Institute Medal for Lifetime Achievement.jpg"
-                alt=""
+                alt="An image of David Attenborough celebrating with his Landscape Institute Medal for Lifetime Achievement."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1 style="font-size: 22px">
+                Landscape Institute Medal for Lifetime Achievement
+              </h1>
+              <p>2019</p>
             </div>
           </div>
         </div>
+
+        <!-- George Foster Peabody Award -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/George_Foster_Peabody_Awards.jpg"
-                alt=""
+                alt="An image of the George Foster Peabody Award."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1>George Foster Peabody Award</h1>
+              <p>2015</p>
             </div>
           </div>
         </div>
+
+        <!-- Order of Merit (OM) -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img
                 src="images/awards/order-of-merit.png"
-                alt=""
+                alt="An image of the Order of Merit medal."
                 style="width: 300px; height: 300px"
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1>Order of Merit</h1>
+              <p>2005</p>
             </div>
           </div>
         </div>
+
+        <!-- Companion of Honour (CM) -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -353,12 +371,13 @@
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1>Companion of Honour</h1>
+              <p>1996</p>
             </div>
           </div>
         </div>
+
+        <!-- Royal Victorian Order (RVO) -->
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -369,25 +388,8 @@
               />
             </div>
             <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
-            </div>
-          </div>
-        </div>
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img
-                src="images/awards/Order of St Michael and St George.jpg"
-                alt=""
-                style="width: 300px; height: 300px"
-              />
-            </div>
-            <div class="flip-card-back">
-              <h1>.</h1>
-              <p>.</p>
-              <p>.</p>
+              <h1>Royal Victorian Order</h1>
+              <p>1991</p>
             </div>
           </div>
         </div>
